<resources>
    <string name="app_name">Kleos2k18</string>
    <string name="question">Questions</string>
    <string name="nit_raipur">NIT Raipur</string>
    <string name="utkarshchoubey629_gmail_com">utkarshchoubey629@gmail.com</string>
    <string name="_4">4</string>
    <string name="questions">Questions</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="kleos">Kleos</string>>
</resources>
